feat: finding median of number stream

--- a/educative/two_heaps/two_heaps.ipynb
+++ b/educative/two_heaps/two_heaps.ipynb
@@ -24,20 +24,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median is: 2.0\n",
+      "The median is: 3.0\n",
+      "The median is: 3.5\n"
+     ]
+    }
+   ],
    "source": [
+    "from heapq import *\n",
     "\n",
-    "#find the median of a number stream - medium\n",
     "\n",
-    "class TreeNode:\n",
-    "    ban ban ban dosh dosh  asdasd"
+    "class MedianOfAStream:\n",
+    "\n",
+    "  maxHeap = []  # containing first half of numbers\n",
+    "  minHeap = []  # containing second half of numbers\n",
+    "\n",
+    "  def insert_num(self, num):\n",
+    "    if not self.maxHeap or -self.maxHeap[0] >= num:\n",
+    "      heappush(self.maxHeap, -num)\n",
+    "    else:\n",
+    "      heappush(self.minHeap, num)\n",
+    "\n",
+    "    # either both the heaps will have equal number of elements or max-heap will have one\n",
+    "    # more element than the min-heap\n",
+    "    if len(self.maxHeap) > len(self.minHeap) + 1:\n",
+    "      heappush(self.minHeap, -heappop(self.maxHeap))\n",
+    "    elif len(self.maxHeap) < len(self.minHeap):\n",
+    "      heappush(self.maxHeap, -heappop(self.minHeap))\n",
+    "\n",
+    "  def find_median(self):\n",
+    "    if len(self.maxHeap) == len(self.minHeap):\n",
+    "      # we have even number of elements, take the average of middle two elements\n",
+    "      return (-self.maxHeap[0]  + self.minHeap[0]) / 2.0\n",
+    "\n",
+    "    # because max-heap will have one more element than the min-heap\n",
+    "    return -self.maxHeap[0] /1.0\n",
+    "\n",
+    "\n",
+    "medianOfAStream = MedianOfAStream()\n",
+    "medianOfAStream.insert_num(3)\n",
+    "medianOfAStream.insert_num(1)\n",
+    "print(\"The median is: \" + str(medianOfAStream.find_median()))\n",
+    "medianOfAStream.insert_num(5)\n",
+    "print(\"The median is: \" + str(medianOfAStream.find_median()))\n",
+    "medianOfAStream.insert_num(4)\n",
+    "print(\"The median is: \" + str(medianOfAStream.find_median()))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
