fea:  two heaps find next interval

--- a/educative/two_heaps/two_heaps.ipynb
+++ b/educative/two_heaps/two_heaps.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -95,20 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sliding window medians are: [1.5, 0.5, 1.0, 4.0]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'heapq' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 59>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSliding window medians are: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(result))\n\u001b[1;32m     58\u001b[0m slidingWindowMedian \u001b[39m=\u001b[39m SlidingWindowMedian()\n\u001b[0;32m---> 59\u001b[0m result \u001b[39m=\u001b[39m slidingWindowMedian\u001b[39m.\u001b[39;49mfind_sliding_window_median(\n\u001b[1;32m     60\u001b[0m [\u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m5\u001b[39;49m], \u001b[39m3\u001b[39;49m)\n\u001b[1;32m     61\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSliding window medians are: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(result))\n",
-      "Input \u001b[0;32mIn [28]\u001b[0m, in \u001b[0;36mSlidingWindowMedian.find_sliding_window_median\u001b[0;34m(self, nums, k)\u001b[0m\n\u001b[1;32m     26\u001b[0m elementToBeRemoved\u001b[39m=\u001b[39mnums[i\u001b[39m-\u001b[39mk\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     27\u001b[0m \u001b[39mif\u001b[39;00m elementToBeRemoved \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmaxHeap[\u001b[39m0\u001b[39m]:\n\u001b[0;32m---> 28\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mremove(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmaxHeap,\u001b[39m-\u001b[39;49melementToBeRemoved)\n\u001b[1;32m     29\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mremove(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mminHeap,elementToBeRemoved)\n",
-      "Input \u001b[0;32mIn [28]\u001b[0m, in \u001b[0;36mSlidingWindowMedian.remove\u001b[0;34m(self, heap, element)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[39mdel\u001b[39;00m heap[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     41\u001b[0m \u001b[39mif\u001b[39;00m ind \u001b[39m<\u001b[39m \u001b[39mlen\u001b[39m(heap):\n\u001b[0;32m---> 42\u001b[0m     heapq\u001b[39m.\u001b[39m_siftup(heap,ind)\n\u001b[1;32m     43\u001b[0m     heapq\u001b[39m.\u001b[39m_siftdown(heap,\u001b[39m0\u001b[39m,ind)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'heapq' is not defined"
+      "Sliding window medians are: [1.5, 0.5, 1.0, 4.0]\n",
+      "Sliding window medians are: [1.0, 2.0, 3.0]\n"
      ]
     }
    ],
@@ -176,6 +164,137 @@
     "print(\"Sliding window medians are: \" + str(result))\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum capital:6\n",
+      "Maximum capital:8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Maximize capital hard\n",
+    "#given set of investment projects with their repective profits, we need to find the most\n",
+    "#profitable projects. We are given an initial capital and are allow to invest only in \n",
+    "#fixed number of projects. Our goal is to choose projects that give us the max prfit.\n",
+    "#Write function that returns the maximum total capital after selecting the most\n",
+    "#profitable projects.\n",
+    "#We can start an inverstment project only when we have the required capital.\n",
+    "#Once a project is selected, we can assume that its profit has become our capital. \n",
+    "from heapq import *\n",
+    "\n",
+    "def find_maximum_capital(capital,profits,numberOfProjects,initialCapital):\n",
+    "    minCapitalHeap=[]\n",
+    "    maxProfitHeap = []\n",
+    "\n",
+    "    for i in range(0,len(profits)):\n",
+    "        heappush(minCapitalHeap,(capital[i],i))\n",
+    "\n",
+    "    availableCapital = initialCapital\n",
+    "\n",
+    "    for _ in range(numberOfProjects):\n",
+    "\n",
+    "        while minCapitalHeap and minCapitalHeap[0][0] <= availableCapital:\n",
+    "            capital,i = heappop(minCapitalHeap)\n",
+    "            heappush(maxProfitHeap, (-profits[i],i))\n",
+    "\n",
+    "        if not maxProfitHeap:\n",
+    "            break\n",
+    "\n",
+    "        availableCapital += -heappop(maxProfitHeap)[0]\n",
+    "    \n",
+    "    return availableCapital\n",
+    "\n",
+    "\n",
+    "print(\"Maximum capital:\"+ str(find_maximum_capital([0,1,2],[1,2,3],2,1)))\n",
+    "print(\"Maximum capital:\"+ str(find_maximum_capital([0,1,2,3],[1,2,3,5],3,0)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 1 \n",
+    "#next interval hard \n",
+    "#given an array of interval, find the next interval of each interval. in a list of intervals, for an interval\n",
+    "#'i' its next interval 'j' will have the smallest 'start' greater than or equal to the 'end' of 'i'.\n",
+    "#write a function to return an array containing indices of the next interval of each input interval. if there is no next\n",
+    "#interval of given interval, return-1. It is given that none of the intervals have same start point.\n",
+    "from heapq import * \n",
+    "\n",
+    "class Interval:\n",
+    "    def __init__(self, start,end):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "\n",
+    "def find_next_interval(intervals):\n",
+    "    n = len(intervals)\n",
+    "\n",
+    "    maxStartHeap,maxEndHeap=[],[]\n",
+    "    result = [0 for x in range(n)]\n",
+    "\n",
+    "    for endIndex in range(n):\n",
+    "        heappush(maxStartHeap,(-intervals[endIndex].start,endIndex))\n",
+    "        heappush(maxEndHeap,(-intervals[endIndex].end,endIndex))\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        topEnd, endIndex = heappop(maxEndHeap)\n",
+    "        result[endIndex] = -1\n",
+    "\n",
+    "        if -maxStartHeap[0][0]>=-topEnd:\n",
+    "            topStart,startIndex = heappop(maxStartHeap)\n",
+    "\n",
+    "            while maxStartHeap and -maxStartHeap[0][0] >= -topEnd:\n",
+    "                topStart, startIndex = heappop(maxStartHeap)\n",
+    "            result[endIndex] = startIndex\n",
+    "\n",
+    "            heappush(maxStartHeap,(topStart,startIndex))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "print(find_next_interval([Interval(2,3),Interval(3,4),Interval(5,6)]))\n",
+    "\n",
+    "print(find_next_interval([Interval(3,4),Interval(1,5),Interval(4,6)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "It "
    ]
   }
  ],
