--- a/educative/subsets/subsets.ipynb
+++ b/educative/subsets/subsets.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -84,8 +84,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the list of subsets: [[], [1], [3], [1, 3], [3], [1, 3], [3, 3], [1, 3, 3]]\n",
-      "Here is the list of subsets: [[], [1], [3], [1, 3], [3], [1, 3], [3, 3], [1, 3, 3], [5], [1, 5], [3, 5], [1, 3, 5], [3, 5], [1, 3, 5], [3, 3, 5], [1, 3, 3, 5]]\n"
+      "Here is the list of subsets: [[], [1], [3], [1, 3], [3, 3], [1, 3, 3]]\n",
+      "Here is the list of subsets: [[], [1], [3], [1, 3], [3, 3], [1, 3, 3], [5], [1, 5], [3, 5], [1, 3, 5], [3, 3, 5], [1, 3, 3, 5]]\n"
      ]
     }
    ],
@@ -99,7 +99,8 @@
     "    startIndex, endIndex = 0, 0\n",
     "    for i in range(len(nums)):\n",
     "        startIndex = 0\n",
-    "        # if current and the previous elements are same, create new subsets only from the subsets\n",
+    "        # if current and the previous elements are same, \n",
+    "        #create new subsets only from the subsets\n",
     "        # added in the previous step\n",
     "        if i > 0 and nums[i] == nums[i - 1]:\n",
     "            startIndex = endIndex + 1\n",
@@ -117,14 +118,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "permutationsdeque([[]])1\n",
+      "newPermutation[1]\n",
+      "permutationsdeque([[1]])3\n",
+      "newPermutation[3, 1]\n",
+      "newPermutation[1, 3]\n",
+      "All permutations[[3, 1], [1, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Permutations medium\n",
+    "from collections import deque\n",
+    "#O(n*n!)| O(n*n!)\n",
+    "def find_permutations(nums):\n",
+    "    numLength = len(nums)\n",
+    "    result = []\n",
+    "    permutations = deque()\n",
+    "    permutations.append([])\n",
+    "    for currentNumer in nums:\n",
+    "        n = len(permutations)\n",
+    "        for _ in range(n):\n",
+    "            print('permutations'+str(permutations)+str(currentNumer))\n",
+    "            oldPermutations = permutations.popleft()\n",
+    "            # print(oldPermutations)\n",
+    "            for j in range(len(oldPermutations)+1):\n",
+    "                newPermutation = list(oldPermutations)\n",
+    "                newPermutation.insert(j,currentNumer)\n",
+    "                print('newPermutation'+str(newPermutation))\n",
+    "                if len(newPermutation)==numLength:\n",
+    "                    result.append(newPermutation)\n",
+    "                else:\n",
+    "                    permutations.append(newPermutation)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "print('All permutations'+str(find_permutations([1,3])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "Str permutations are:['ad52', 'Ad52', 'aD52', 'AD52']\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "Str permutations are:['ab7c', 'Ab7c', 'aB7c', 'AB7c', 'ab7C', 'Ab7C', 'aB7C', 'AB7C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Givn string find all its permutations preserving the character \n",
+    "#sequence but changing case\n",
+    "#Medium problem\n",
+    "#O(n*2^n) | O(n*2^n)\n",
+    "def find_letter_case_string_permutations(str):\n",
+    "    permutations=[]\n",
+    "    permutations.append(str)\n",
+    "    print(len(permutations))\n",
+    "    for i in range(len(str)):\n",
+    "        if str[i].isalpha():\n",
+    "            n = len(permutations)\n",
+    "            print(n)\n",
+    "            for j in range(n):\n",
+    "                chs=list(permutations[j])\n",
+    "                chs[i] = chs[i].swapcase()\n",
+    "                permutations.append(''.join(chs))\n",
+    "\n",
+    "    return permutations\n",
+    "\n",
+    "\n",
+    "print(\"Str permutations are:\"+str(find_letter_case_string_permutations(\"ad52\")))\n",
+    "print(\"Str permutations are:\"+str(find_letter_case_string_permutations(\"ab7c\")))"
+   ]
   }
  ],
  "metadata": {
