--- a/educative/modified_binary_search/modified_binary_search.ipynb
+++ b/educative/modified_binary_search/modified_binary_search.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -73,6 +73,270 @@
     "print(binary_search([1, 2, 3, 4, 5, 6, 7], 5))\n",
     "print(binary_search([10, 6, 4], 10))\n",
     "print(binary_search([10, 6, 4], 4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "-1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ceiling of a number medium\n",
+    "#given an array of numbers sorted in an ascending order, find the ceiling of a given\n",
+    "#number key. The ceiling of the key will be slammest element in the given array\n",
+    "#greater than or equal to the key\n",
+    "\n",
+    "\n",
+    "def search_ceiling_of_a_number(arr,key):\n",
+    "    l=0\n",
+    "    r=len(arr)-1\n",
+    "    if key>arr[len(arr)-1]:\n",
+    "        return -1\n",
+    "\n",
+    "    while l<r:\n",
+    "        mid = l+(r-l)//2\n",
+    "\n",
+    "        if key>arr[mid]:\n",
+    "            l=mid+1\n",
+    "        elif key < arr[mid]:\n",
+    "            r=mid-1\n",
+    "        else:\n",
+    "            return mid\n",
+    "\n",
+    "    return l\n",
+    "            \n",
+    "\n",
+    "print(search_ceiling_of_a_number([4, 6, 10], 6))\n",
+    "print(search_ceiling_of_a_number([1, 3, 8, 10, 15], 12))\n",
+    "print(search_ceiling_of_a_number([4, 6, 10], 17))\n",
+    "print(search_ceiling_of_a_number([4, 6, 10], -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "h\n",
+      "1\n",
+      "1\n",
+      "c\n",
+      "4\n",
+      "0\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Next letter medium\n",
+    "\n",
+    "# Given an array of lowercase sorted in ascending order, find the smallest letter\n",
+    "#in the given array greater than a given key\n",
+    "\n",
+    "#Assume the given array is circular list, which means that the last letter is assumed to be connected\n",
+    "#with the first letter. This also means that the smallest letter in the given array is greater\n",
+    "#than the last letter of the array and is also the first of the letter.\n",
+    "def search_next_letter(letters,key):\n",
+    "    n=len(letters)\n",
+    "    l,r=0,n-1\n",
+    "    while l<=r:\n",
+    "        mid = l+(r-l)//2\n",
+    "        if key < letters[mid]:\n",
+    "            r = mid-1\n",
+    "        else:\n",
+    "            l=mid+1\n",
+    "    print(l)\n",
+    "    print(l%n)\n",
+    "    return letters[l%n]\n",
+    "\n",
+    "print(search_next_letter(['a', 'c', 'f', 'h'], 'f'))\n",
+    "print(search_next_letter(['a', 'c', 'f', 'h'], 'b'))\n",
+    "print(search_next_letter(['a', 'c', 'f', 'h'], 'm'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n",
+      "[3, 3]\n",
+      "[-1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Number range medium\n",
+    "\n",
+    "def find_range(arr,key):\n",
+    "    result=[-1,-1]\n",
+    "    result[0] = binary_search(arr,key,False)\n",
+    "    if result[0]!=-1:\n",
+    "        result[1] = binary_search(arr,key,True)\n",
+    "    return result\n",
+    "\n",
+    "def binary_search(arr,key,findMaxIndex):\n",
+    "    keyIndex=-1\n",
+    "    l,r=0,len(arr)-1\n",
+    "    while l<=r:\n",
+    "        mid = l+(r-l)//2\n",
+    "        if key<arr[mid]:\n",
+    "            r = mid-1\n",
+    "        elif key>arr[mid]:\n",
+    "            l= mid+1\n",
+    "        else:\n",
+    "            keyIndex=mid\n",
+    "            if findMaxIndex:\n",
+    "                l = mid+1\n",
+    "            else:\n",
+    "                r = mid-1\n",
+    "    return keyIndex\n",
+    "\n",
+    "print(find_range([4, 6, 6, 6, 9], 6))\n",
+    "print(find_range([1, 3, 8, 10, 15], 10))\n",
+    "print(find_range([1, 3, 8, 10, 15], 12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "-1\n",
+      "4\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "\n",
+    "class ArrayReader:\n",
+    "\n",
+    "  def __init__(self, arr):\n",
+    "    self.arr = arr\n",
+    "\n",
+    "  def get(self, index):\n",
+    "    if index >= len(self.arr):\n",
+    "      return math.inf\n",
+    "    return self.arr[index]\n",
+    "\n",
+    "\n",
+    "def search_in_infinite_array(reader, key):\n",
+    "  # find the proper bounds first\n",
+    "  start, end = 0, 1\n",
+    "  while reader.get(end) < key:\n",
+    "    newStart = end + 1\n",
+    "    end += (end - start + 1) * 2\n",
+    "    # increase to double the bounds size\n",
+    "    start = newStart\n",
+    "\n",
+    "  return binary_search(reader, key, start, end)\n",
+    "\n",
+    "\n",
+    "def binary_search(reader, key, start, end):\n",
+    "  while start <= end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "    if key < reader.get(mid):\n",
+    "      end = mid - 1\n",
+    "    elif key > reader.get(mid):\n",
+    "      start = mid + 1\n",
+    "    else:  # found the key\n",
+    "      return mid\n",
+    "\n",
+    "  return -1\n",
+    "\n",
+    "\n",
+    "reader = ArrayReader([4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30])\n",
+    "print(search_in_infinite_array(reader, 16))\n",
+    "print(search_in_infinite_array(reader, 11))\n",
+    "reader = ArrayReader([1, 3, 8, 10, 15])\n",
+    "print(search_in_infinite_array(reader, 15))\n",
+    "print(search_in_infinite_array(reader, 200))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def search_min_diff_element(arr, key):\n",
+    "  if key < arr[0]:\n",
+    "    return arr[0]\n",
+    "  n = len(arr)\n",
+    "  if key > arr[n - 1]:\n",
+    "    return arr[n - 1]\n",
+    "\n",
+    "  start, end = 0, n - 1\n",
+    "  while start <= end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "    if key < arr[mid]:\n",
+    "      end = mid - 1\n",
+    "    elif key > arr[mid]:\n",
+    "      start = mid + 1\n",
+    "    else:\n",
+    "      return arr[mid]\n",
+    "\n",
+    "  # at the end of the while loop, 'start == end+1'\n",
+    "  # we are not able to find the element in the given array\n",
+    "  # return the element which is closest to the 'key'\n",
+    "  if (arr[start] - key) < (key - arr[end]):\n",
+    "    return arr[start]\n",
+    "  return arr[end]\n",
+    "\n",
+    "print(search_min_diff_element([4, 6, 10], 7))\n",
+    "print(search_min_diff_element([4, 6, 10], 4))\n",
+    "print(search_min_diff_element([1, 3, 8, 10, 15], 12))\n",
+    "print(search_min_diff_element([4, 6, 10], 17))\n"
    ]
   }
  ],
