--- a/educative/modified_binary_search/modified_binary_search.ipynb
+++ b/educative/modified_binary_search/modified_binary_search.ipynb
@@ -301,13 +301,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "def search_min_diff_element(arr, key):\n",
     "  if key < arr[0]:\n",
@@ -338,6 +349,205 @@
     "print(search_min_diff_element([1, 3, 8, 10, 15], 12))\n",
     "print(search_min_diff_element([4, 6, 10], 17))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "8\n",
+      "12\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_max_in_bitonic_array(arr):\n",
+    "  start, end = 0, len(arr) - 1\n",
+    "  while start < end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "    if arr[mid] > arr[mid + 1]:\n",
+    "      end = mid\n",
+    "    else:\n",
+    "      start = mid + 1\n",
+    "\n",
+    "  # at the end of the while loop, 'start == end'\n",
+    "  return arr[start]\n",
+    "\n",
+    "\n",
+    "print(find_max_in_bitonic_array([1, 3, 8, 12, 4, 2]))\n",
+    "print(find_max_in_bitonic_array([3, 8, 3, 1]))\n",
+    "print(find_max_in_bitonic_array([1, 3, 8, 12]))\n",
+    "print(find_max_in_bitonic_array([10, 9, 8]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SEarch bitonis array medium\n",
+    "\n",
+    "def search_bitonic_array(arr, key):\n",
+    "  maxIndex = find_max(arr)\n",
+    "  keyIndex = binary_search(arr, key, 0, maxIndex)\n",
+    "  if keyIndex != -1:\n",
+    "    return keyIndex\n",
+    "  return binary_search(arr, key, maxIndex + 1, len(arr) - 1)\n",
+    "\n",
+    "\n",
+    "# find index of the maximum value in a bitonic array\n",
+    "def find_max(arr):\n",
+    "  start, end = 0, len(arr) - 1\n",
+    "  while start < end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "    if arr[mid] > arr[mid + 1]:\n",
+    "      end = mid\n",
+    "    else:\n",
+    "      start = mid + 1\n",
+    "\n",
+    "  # at the end of the while loop, 'start == end'\n",
+    "  return start\n",
+    "\n",
+    "\n",
+    "# order-agnostic binary search\n",
+    "def binary_search(arr, key, start, end):\n",
+    "  while start <= end:\n",
+    "    mid = int(start + (end - start) / 2)\n",
+    "\n",
+    "    if key == arr[mid]:\n",
+    "      return mid\n",
+    "\n",
+    "    if arr[start] < arr[end]:  # ascending order\n",
+    "      if key < arr[mid]:\n",
+    "        end = mid - 1\n",
+    "      else:  # key > arr[mid]\n",
+    "        start = mid + 1\n",
+    "    else:  # descending order\n",
+    "      if key > arr[mid]:\n",
+    "        end = mid - 1\n",
+    "      else:  # key < arr[mid]\n",
+    "        start = mid + 1\n",
+    "\n",
+    "  return -1  # element is not found\n",
+    "\n",
+    "\n",
+    "print(search_bitonic_array([1, 3, 8, 4, 3], 4))\n",
+    "print(search_bitonic_array([3, 8, 3, 1], 8))\n",
+    "print(search_bitonic_array([1, 3, 8, 12], 12))\n",
+    "print(search_bitonic_array([10, 9, 8], 10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Search in rotated arry medium\n",
+    "\n",
+    "def search_rotated_array(arr, key):\n",
+    "  start, end = 0, len(arr) - 1\n",
+    "  while start <= end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "    if arr[mid] == key:\n",
+    "      return mid\n",
+    "\n",
+    "    if arr[start] <= arr[mid]:  # left side is sorted in ascending order\n",
+    "      if key >= arr[start] and key < arr[mid]:\n",
+    "        end = mid - 1\n",
+    "      else:  # key > arr[mid]\n",
+    "        start = mid + 1\n",
+    "    else:  # right side is sorted in ascending order\n",
+    "      if key > arr[mid] and key <= arr[end]:\n",
+    "        start = mid + 1\n",
+    "      else:\n",
+    "        end = mid - 1\n",
+    "\n",
+    "  # we are not able to find the element in the given array\n",
+    "  return -1\n",
+    "\n",
+    "print(search_rotated_array([10, 15, 1, 3, 8], 15))\n",
+    "print(search_rotated_array([4, 5, 7, 9, 10, -1, 2], 10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Rotation count medium\n",
+    "\n",
+    "def count_rotations(arr):\n",
+    "  start, end = 0, len(arr) - 1\n",
+    "  while start < end:\n",
+    "    mid = start + (end - start) // 2\n",
+    "\n",
+    "    # if mid is greater than the next element\n",
+    "    if mid < end and arr[mid] > arr[mid + 1]:\n",
+    "      return mid + 1\n",
+    "\n",
+    "    # if mid is smaller than the previous element\n",
+    "    if mid > start and arr[mid - 1] > arr[mid]:\n",
+    "      return mid\n",
+    "\n",
+    "    if arr[start] < arr[mid]:  # left side is sorted, so the pivot is on right side\n",
+    "      start = mid + 1\n",
+    "    else:  # right side is sorted, so the pivot is on the left side\n",
+    "      end = mid - 1\n",
+    "\n",
+    "  return 0  # the array has not been rotated\n",
+    "\n",
+    "\n",
+    "print(count_rotations([10, 15, 1, 3, 8]))\n",
+    "print(count_rotations([4, 5, 7, 9, 10, -1, 2]))\n",
+    "print(count_rotations([1, 3, 8, 10]))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -359,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
