feat: added basics

--- a/educative/miscellaneous/miscellaneous.ipynb
+++ b/educative/miscellaneous/miscellaneous.ipynb
@@ -299,13 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kth smallest number is: 5\n",
+      "Kth smallest number is: 5\n",
+      "Kth smallest number is: 11\n"
+     ]
+    }
+   ],
    "source": [
     "#6. Using Randomized Partitioning Scheme of Quicksort#\n",
     "\n",
