--- a/educative/topological_sort/topological_sort.ipynb
+++ b/educative/topological_sort/topological_sort.ipynb
@@ -22,13 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topological sort: [3, 2, 0, 1]\n",
+      "Topological sort: [4, 2, 3, 0, 1]\n",
+      "Topological sort: [5, 6, 3, 4, 0, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "#Topological Sort (medium)\n",
     "\n",
