--- a/educative/dfs/dfs.ipynb
+++ b/educative/dfs/dfs.ipynb
@@ -399,13 +399,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Path Sum: 6\n",
+      "Maximum Path Sum: 31\n",
+      "Maximum Path Sum: -1\n"
+     ]
+    }
+   ],
    "source": [
     "#Path with maximuim sum hard\n",
     "\n",
@@ -495,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
