--- a/educative/top_k_elements/top_k.ipynb
+++ b/educative/top_k_elements/top_k.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -13,8 +13,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are the top K numbers: []\n",
-      "Here are the top K numbers: []\n"
+      "Here are the top K numbers: [5, 12, 11]\n",
+      "Here are the top K numbers: [11, 12, 12]\n"
      ]
     }
    ],
