--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -55,7 +55,7 @@
     "            if currNode.right:\n",
     "                queue.append(currNode.right)\n",
     "        result.append(currLevel)\n",
-    "\n",
+    "    return result\n",
     "        \n",
     "\n",
     "root = TreeNode(12)\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
