cc linkedl ist update

--- a/graph/graph.ipynb
+++ b/graph/graph.ipynb
@@ -68,11 +68,14 @@
     "        idx+=1\n",
     "\n",
     "        #check all the edges of current\n",
-    "        for node in self.data[current]:\n",
+    "        for node in graph.data[current]:\n",
     "            if not discovered[node]:\n",
     "                discovered[node] = True\n",
     "                queue.append(node)\n",
     "    return queue\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
