--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -13,7 +13,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Level order traversal: None\n"
+      "Level order traversal: [[12], [7, 1], [9, 10, 5]]\n"
      ]
     }
    ],
