--- a/data_structure_and_algorithm_python/circular_linked_list/circular_linked_list.ipynb
+++ b/data_structure_and_algorithm_python/circular_linked_list/circular_linked_list.ipynb
@@ -207,6 +207,18 @@
     "print(cllist.is_circular_linked_list(cllist))\n",
     "print(cllist.is_circular_linked_list(llist))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
