feat: cansum,How dp problem

--- a/dp_course/dp_course.ipynb
+++ b/dp_course/dp_course.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -78,6 +78,72 @@
     "print(gridTravelers(100,100))\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Memo recipe\n",
+    "# 1.Make it work \n",
+    "        #- visualize the problem as a tree \n",
+    "        #- implement the tree using recursion\n",
+    "# 2.Make it efficient\n",
+    "        #- add a memo object\n",
+    "        #- add a base case to return memo values\n",
+    "        #- store return values into the memo\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#write functnio cansum(targetsum,numbers) ,return true if it is possible \n",
+    "#we can re use numbers many as we can\n",
+    "#Brute O(n^m)|O(m)  => memo  O(m*n)|O(m)\n",
+    "def canSum(targetSum,numbers,memo={}):\n",
+    "    if targetSum in memo:\n",
+    "        return memo[targetSum]\n",
+    "\n",
+    "    if targetSum==0:\n",
+    "        return True\n",
+    "    if targetSum<0:\n",
+    "        return False\n",
+    "    for num in numbers:\n",
+    "        remainder = targetSum-num\n",
+    "        if canSum(remainder,numbers,memo):\n",
+    "            memo[targetSum] = True\n",
+    "            return True\n",
+    "            \n",
+    "    memo[targetSum] = False\n",
+    "    return False\n",
+    "\n",
+    "print(canSum(7,[2,3,4]))\n",
+    "# print(canSum(7,[2,3]))\n",
+    "# print(canSum(7,[2,3,7]))\n",
+    "# print(canSum(300,[7,14]))"
    ]
   },
   {
