feat:bestsum dp

--- a/dp_course/dp_course.ipynb
+++ b/dp_course/dp_course.ipynb
@@ -148,6 +148,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3]\n",
+      "[3, 2, 2]\n",
+      "[7]\n",
+      "[4, 4]\n",
+      "[10, 10, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#write function bestSum(targetSum,numbers) that takes in a targetSum and an array of numbers as arguments.\n",
+    "#The function should return an array containing the shortest combination of numbers that add up to exactly the targetSum.\n",
+    "#if there is tie for the shortest combination, you may return any one of the shortest.\n",
+    "#brute force        memo\n",
+    "# O(n^m*m)|O(m)     O(n*m*m)|O(m^2)\n",
+    "def bestSum(targetSum,numbers,memo={}):\n",
+    "    if targetSum in memo:\n",
+    "        return memo[targetSum]\n",
+    "    if targetSum==0:\n",
+    "        return []\n",
+    "    if targetSum<0:\n",
+    "        return None\n",
+    "    shortestCombination=None\n",
+    "    for num in numbers:\n",
+    "        remainder = targetSum-num\n",
+    "        result = bestSum(remainder,numbers,memo)\n",
+    "        if result!=None:\n",
+    "            combination=result+[num]\n",
+    "            if shortestCombination==None or len(combination) <len(shortestCombination):\n",
+    "                shortestCombination=combination\n",
+    "\n",
+    "    memo[targetSum]=shortestCombination\n",
+    "    return shortestCombination\n",
+    "\n",
+    "\n",
+    "print(bestSum(7,[2,3,4],memo={}))\n",
+    "print(bestSum(7,[2,3],memo={}))\n",
+    "print(bestSum(7,[2,3,7],memo={}))\n",
+    "print(bestSum(8,[1,4,5],memo={}))\n",
+    "print(bestSum(300,[7,14,10],memo={}))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
