feat: init can construct

--- a/dp_course/dp_course.ipynb
+++ b/dp_course/dp_course.ipynb
@@ -209,7 +209,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#canConstruct\n",
+    "\n",
+    "#memo solutin\n",
+    "\n",
+    "def canConstruct(target,wordBank):\n",
+    "    return target"
+   ]
   }
  ],
  "metadata": {
